# Mansa

./: Cargo.toml
.cargo/: config.toml
settings/: general_settings.json
settings/Reddit/: settings.json
src/: main.rs
src/client/: database.rs  http_client.rs  mod.rs  parser.rs  settings.rs
src/client/db/: account_db.rs  client.rs  entities_db.rs  mod.rs  tasks_db.rs
src/client/managers/: account_manager.rs  mod.rs  task_manager.rs
src/client/parser_v2/: mod.rs  parser.rs  statistics.rs  task_publisher.rs
src/client/parser_v2/account_manager/: account.rs  account_pool.rs  account_pool_builder.rs  mod.rs
src/commons/: entity.rs  mod.rs  parsing_tasks.rs  social_network.rs
src/generic/: entity.rs  mod.rs  parsing_tasks.rs  social_network.rs
src/reddit/: data_types.rs  mod.rs  parsing_tasks.rs  reddit.rs  reddit_parsing_task.rs  task_type.rs
src/reddit/data_types/: mod.rs  reddit_auth.rs  reddit_comment.rs  reddit_listing.rs  reddit_pages.rs  reddit_post.rs  reddit_response_body.rs
src/utils/: file_reader.rs  mod.rs  time.rs
