[package]
name = "mansa"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

#[profile.release-with-debug]
#inherits = "release"
#debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1.0", features = ["unstable", "derive", "rc", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
strum_macros = "0.24"
strum = { version = "0.24", features = ["derive"] }
priority-queue = "1.2.3"
derivative = "2.2.0"
async-trait = "0.1.56"
lazy_static = "1.4.0"
log = "0.4.0"
env_logger = "0.9.0"
tokio = { version = "1", features = ["full"] }
async-executor = "1.4.1"
futures-lite = "1.12.0"
mongodb = "2.3.0"
regex = "1.6.0"
async_once = "0.2.6"
futures = "0.3.21"
chrono = "0.4.19"
crossbeam = "0.8.2"
flurry = "0.4.0"
scc = "0.11.1"
tokio-stream = "0.1.11"

[env]
RUST_LOG = {value = "debug", force = true}